Added pdf raport export

--- a/angularping/apptest/documentation/components/Bodystats.html
+++ b/angularping/apptest/documentation/components/Bodystats.html
@@ -175,6 +175,12 @@
                 <td class="col-md-9"><code>true</code></td>
             </tr>
 
+            <tr>
+                <td class="col-md-3">imports</td>
+                <td class="col-md-9">
+                                <code><a href="https://angular.io/api/common/CommonModule" target="_blank" >CommonModule</a></code>
+                </td>
+            </tr>
 
 
 
@@ -319,8 +325,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="198"
-                                    class="link-to-prism">src/app/bodystats/bodystats.ts:198</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="228"
+                                    class="link-to-prism">src/app/bodystats/bodystats.ts:228</a></div>
                         </td>
                     </tr>
 
@@ -394,8 +400,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="50"
-                                    class="link-to-prism">src/app/bodystats/bodystats.ts:50</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="77"
+                                    class="link-to-prism">src/app/bodystats/bodystats.ts:77</a></div>
                         </td>
                     </tr>
 
@@ -436,8 +442,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="117"
-                                    class="link-to-prism">src/app/bodystats/bodystats.ts:117</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="147"
+                                    class="link-to-prism">src/app/bodystats/bodystats.ts:147</a></div>
                         </td>
                     </tr>
 
@@ -519,8 +525,8 @@ console.log(online);</code></pre></div></div>
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="146"
-                                    class="link-to-prism">src/app/bodystats/bodystats.ts:146</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="176"
+                                    class="link-to-prism">src/app/bodystats/bodystats.ts:176</a></div>
                         </td>
                     </tr>
 
@@ -615,8 +621,8 @@ console.log(result);
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="168"
-                                    class="link-to-prism">src/app/bodystats/bodystats.ts:168</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="198"
+                                    class="link-to-prism">src/app/bodystats/bodystats.ts:198</a></div>
                         </td>
                     </tr>
 
@@ -661,15 +667,15 @@ console.log(result);
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="222"
-                                    class="link-to-prism">src/app/bodystats/bodystats.ts:222</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="252"
+                                    class="link-to-prism">src/app/bodystats/bodystats.ts:252</a></div>
                         </td>
                     </tr>
 
 
             <tr>
                 <td class="col-md-4">
-                        <div class="io-description"><p>Asks backend server for raport and downloads it onto user&#39;s machine</p>
+                        <div class="io-description"><p>Asks backend server for raport and downloads it onto user&#39;s machine as a pdf file</p>
 <b>Example :</b><div><pre class="line-numbers"><code class="language-html">&lt;button (click)=&quot;raportDownload(0)&quot;&gt;DOWNLOAD RAPORT&lt;/button&gt;</code></pre></div></div>
 
                             <div class="io-description">
@@ -747,7 +753,7 @@ console.log(result);
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="45" class="link-to-prism">src/app/bodystats/bodystats.ts:45</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="72" class="link-to-prism">src/app/bodystats/bodystats.ts:72</a></div>
                         </td>
                     </tr>
 
@@ -784,7 +790,7 @@ console.log(result);
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="40" class="link-to-prism">src/app/bodystats/bodystats.ts:40</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="67" class="link-to-prism">src/app/bodystats/bodystats.ts:67</a></div>
                         </td>
                     </tr>
 
@@ -819,7 +825,7 @@ console.log(result);
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="178" class="link-to-prism">src/app/bodystats/bodystats.ts:178</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="208" class="link-to-prism">src/app/bodystats/bodystats.ts:208</a></div>
                                 </td>
                             </tr>
 
@@ -841,7 +847,7 @@ console.log(result);
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="185" class="link-to-prism">src/app/bodystats/bodystats.ts:185</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="215" class="link-to-prism">src/app/bodystats/bodystats.ts:215</a></div>
                                 </td>
                             </tr>
 
@@ -852,12 +858,36 @@ console.log(result);
 
 
     <div class="tab-pane fade  tab-source-code" id="source">
-        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Component,signal } from &#x27;@angular/core&#x27;;
+        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Component, signal } from &#x27;@angular/core&#x27;;
+import { CommonModule } from &#x27;@angular/common&#x27;;
 import { HttpClient } from &#x27;@angular/common/http&#x27;;
 import { ChangeDetectorRef } from &#x27;@angular/core&#x27;;
 import { firstValueFrom } from &#x27;rxjs&#x27;;
 import { interval } from &#x27;rxjs&#x27;;
 import { HttpErrorResponse } from &#x27;@angular/common/http&#x27;;
+import jsPDF from &quot;jspdf&quot;;
+import autoTable from &quot;jspdf-autotable&quot;
+
+
+/**
+ * Raport response blueprint
+ */
+
+interface RaportResponse {
+  /**
+ * Raport title
+ */
+  Title: string;
+
+  /**
+ * Raport data
+ */
+  result: Array&lt;{
+    Date: string;
+    &#x27;Turned on&#x27;: number;
+    Domain: string;
+  }&gt;;
+}
 
 /**
  * Website stats component
@@ -865,11 +895,14 @@ import { HttpErrorResponse } from &#x27;@angular/common/http&#x27;;
 
 @Component({
   selector: &#x27;app-bodystats&#x27;,
-  imports: [],
+  imports: [CommonModule],
   templateUrl: &#x27;./bodystats.html&#x27;,
   styleUrl: &#x27;./bodystats.css&#x27;,
   standalone: true
 })
+
+
+
 export class Bodystats {
    /**
      * @ignore
@@ -904,6 +937,7 @@ export class Bodystats {
   ngOnInit() {
     // Pre-load data
     this.preloadStyles();
+    // Load PDFDocument dynamically
   }
 
    /**
@@ -920,6 +954,8 @@ export class Bodystats {
 
 
     this.source.subscribe(() &#x3D;&gt; {
+      console.log(&quot;PING&quot;)
+
       this.pingProxied(&#x27;/servicedesk&#x27;).then((result) &#x3D;&gt; {
         console.log(&#x27;pingServicedesk result&#x27;, result);
         if (result) {
@@ -1065,22 +1101,22 @@ export class Bodystats {
       return -1;
     }
   }
-/**
- * Asks backend server for raport and downloads it onto user&#x27;s machine
+   /**
+ * Asks backend server for raport and downloads it onto user&#x27;s machine as a pdf file
  * @param {number} number number of which website in order in app it generates the raport of
  * @returns If successful
  * @example
  * &lt;button (click)&#x3D;&quot;raportDownload(0)&quot;&gt;DOWNLOAD RAPORT&lt;/button&gt;
 */
 
-  public async raportDownload(number : number){
+public async raportDownload(number : number){
       console.log(&quot;download!!!&quot;)
       let domain &#x3D; this.domainarr[number]
       let json;
       console.log(json)
       try{
       const payload &#x3D; {domain : domain};
-      const resp &#x3D; await firstValueFrom(this._http.post(&#x27;/raportfromdomain&#x27;, payload))
+      const resp &#x3D; await firstValueFrom(this._http.post&lt;RaportResponse&gt;(&#x27;/raportfromdomain&#x27;, payload))
         console.log(resp)
       json &#x3D; resp;
       }
@@ -1093,15 +1129,45 @@ export class Bodystats {
       }
       return false;
       }
-      let jsonstring &#x3D; JSON.stringify(json)
-      const blob &#x3D; new Blob([jsonstring], { type: &#x27;application/json&#x27; });
-      const url &#x3D; window.URL.createObjectURL(blob);
-      const a &#x3D; document.createElement(&#x27;a&#x27;);
-      a.href &#x3D; url;
-      a.download &#x3D; &#x27;network_calls.json&#x27;;
-      a.click();
-      window.URL.revokeObjectURL(url);
+
+
+
+      let textarray : string[][] &#x3D; []
+
+      json.result.forEach(element &#x3D;&gt; {
+        let online &#x3D; element[&#x27;Turned on&#x27;] &#x3D;&#x3D; 1 ? &#x27;Online&#x27; : &#x27;Offline&#x27;;
+        textarray.push(Array(element.Date, online, element.Domain))
+      });
+
+
+
+      const doc &#x3D; new jsPDF();
+      doc.setFontSize(16);
+      doc.text(json.Title, 10, 10);
+      doc.setFontSize(12);
+      const headers &#x3D; [[&quot;Date&quot;, &quot;Online&quot;, &quot;Domain&quot;]];
+      const data &#x3D; textarray;
+      autoTable(doc, {
+        head: headers,
+        body: data,
+        startY: 30,
+      });
+      doc.save(json.Title+&quot;.pdf&quot;);
+
+
+
+
+      // let jsonstring &#x3D; JSON.stringify(json)
+      // const blob &#x3D; new Blob([jsonstring], { type: &#x27;application/json&#x27; });
+      // const url &#x3D; window.URL.createObjectURL(blob);
+      // const a &#x3D; document.createElement(&#x27;a&#x27;);
+      // a.href &#x3D; url;
+      // a.download &#x3D; &#x27;network_calls.json&#x27;;
+      // a.click();
+      // window.URL.revokeObjectURL(url);
+
       return true;
+
   }
 }
 </code></pre>
