--- a/angularping/apptest/src/app/bodystats/bodystats.html
+++ b/angularping/apptest/src/app/bodystats/bodystats.html
@@ -14,6 +14,7 @@
         </tbody>
       </table>
     </div>
+    <button class="button1" (click)="raportDownload(0)"> RAPORT </button>
   </div>
 
     <div class="row">
@@ -30,6 +31,7 @@
         </tbody>
       </table>
     </div>
+    <button class="button1" (click)="raportDownload(1)"> RAPORT </button>
   </div>
 
 
@@ -47,5 +49,6 @@
         </tbody>
       </table>
     </div>
+    <button class="button1" (click)="raportDownload(2)"> RAPORT </button>
   </div>
 </div>
