--- a/angularping/apptest/src/app/header/header.css
+++ b/angularping/apptest/src/app/header/header.css
@@ -8,8 +8,9 @@ h1 {
 .shadow-dance-text {
     font-size: 4rem;
     color: #ffffff;
-    text-shadow: 5px 5px 0 #ff005e, 10px 10px 0 #00d4ff;
+    /* text-shadow: 5px 5px 0 #ff005e, 10px 10px 0 #00d4ff;
     animation: shadow-dance 2s infinite;
+    SHADOW ANIMATION TURNED OFF*/
     text-align: center;
 
 }
