--- a/angularping/apptest/src/app/bodystats/bodystats.css
+++ b/angularping/apptest/src/app/bodystats/bodystats.css
@@ -9,12 +9,13 @@
 .pie{
   height:200px;
   width: 200px;
+  align-self: center;
 }
 
 
 
 h2, h3 {
-  color: #444;
+  color: #444444;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: lighter;
   text-align: left;
@@ -40,6 +41,7 @@ h2, h3 {
 	border-radius: 50px;
   padding: 20px;
   width: fit-content;
+  align-self: center;
 }
 
 .button1:hover {
